--- a/style.css
+++ b/style.css
@@ -47,5 +47,12 @@
       display: block;
       margin: 10px 0;
     }
+
+    img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: auto;
+}
   }
 </style>
