--- a/style.css
+++ b/style.css
@@ -34,6 +34,13 @@
     line-height: 1.6;
   }
 
+  img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: auto;
+}
+
   /* Responsive Design */
   @media (max-width: 600px) {
     header, .content {
@@ -49,6 +56,5 @@
       margin: 10px 0;
     }
 
-    
   }
 </style>
