--- a/style.css
+++ b/style.css
@@ -46,5 +46,12 @@
       margin: 10px 0;
     }
 
+    img{
+        width: 100%;
+        height: auto;
+        display: flex;
+        margin: 0 auto;
+    }
+
   }
 </style>
