--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 
     img{
         width: 200%;
-        height: auto;
+        height: 200%;
         display: flex;
         margin: 0 auto;
     }
